--- a/the-crypt-html/the-crypt.html
+++ b/the-crypt-html/the-crypt.html
@@ -5,47 +5,84 @@
     <title>The Crypt</title>
 
     <link rel="stylesheet" href="the-crypt.css">
-
-    <script src="util/spacer.js"></script>
-    <script src="util/collections.js"></script>
-
-    <script src="model/player.js"></script>
-    <script src="model/place.js"></script>
-
-    <script src="view/player-view.js"></script>
-    <script src="view/place-view.js"></script>
-    <script src="view/message-view.js"></script>
-
-    <script src="map/default-map-data.js"></script>
-    <script src="map/map-builder.js"></script>
-
-    <script src="game/the-crypt.js"></script>
-
-    <script src="parser/parser.js"></script>
 </head>
 <body>
-    <h1>The Crypt</h1>
+<h1>The Crypt</h1>
 
-    <div id="place"></div>
+<div id="place"></div>
 
-    <div id="player"></div>
+<div id="player"></div>
 
-    <div id="message"></div>
+<div id="message"></div>
 
-    <div id="controls">
-        <input type="text" id="txtCommand">
-        <button id="btnCommand">Do it</button>
-        <script>
-            const doItBtn = document.getElementById('btnCommand')
+<div id="controls">
+    <input type="text" id="txtCommand">
+    <button id="btnCommand">Do it</button>
+    <script>
+        const doItBtn = document.getElementById('btnCommand')
 
-            doItBtn.addEventListener('click', () => {
-                parseInput(document.getElementById('txtCommand').value)
-            })
-        </script>
+        doItBtn.addEventListener('click', () => {
+            parseInput(document.getElementById('txtCommand').value)
+        })
+    </script>
+</div>
+
+<script type="text/template" id="itemTemplate">
+    <li>{{item}}</li>
+</script>
+
+<script type="text/template" id="exitTemplate">
+    <li>{{exit}}</li>
+</script>
+
+<script type="text/x-template" id="playerTemplate">
+    <p>{{name}}</p>
+    <p>Health: {{health}}</p>
+
+    <ol id="playerItems"></ol>
+</script>
+
+<script type="text/template" id="placeTemplate">
+    <h3>{{title}}</h3>
+    <p>{{description}}</p>
+
+    <div class="placePanel">
+        <h4>Items:</h4>
+        <ol id="placeItems"></ol>
     </div>
 
-    <script>
-        window.theCrypt.init('Kandra')
-    </script>
+    <div class="placePanel">
+        <h4>Exits:</h4>
+        <ol id="placeExits"></ol>
+    </div>
+</script>
+
+<script type="text/template" id="messageTemplate">
+    <p>** {{message}} **</p>
+</script>
+
+<script src="util/templates.js"></script>
+<script src="util/spacer.js"></script>
+<script src="util/collections.js"></script>
+
+<script src="view/message-view.js"></script>
+<script src="view/player-view.js"></script>
+
+
+<script src="model/player.js"></script>
+<script src="model/place.js"></script>
+
+<script src="view/place-view.js"></script>
+
+<script src="map/default-map-data.js"></script>
+<script src="map/map-builder.js"></script>
+
+<script src="game/the-crypt.js"></script>
+
+<script src="parser/parser.js"></script>
+
+<script>
+    window.theCrypt.init('Kandra')
+</script>
 </body>
 </html>
